k8s/apps/base/security/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: dojangkok
spec:
  podSelector: {}
  policyTypes:
    - Ingress
